--- a/ui.cabal
+++ b/ui.cabal
@@ -23,11 +23,14 @@ library
         Editor.Cursor
         Editor.From
         Editor.Render
+        Editor.Select
         Editor.Typesetting
         Other.Error
         Other.Get
         Other.Other
+        Other.Set
         Other.Text
+        Other.Update
         Text.Font
         Text.From
         Text.Max
@@ -37,10 +40,11 @@ library
         Widget.Editor
         Widget.Remove
         Widget.Replace
+        Widget.Resize
         Widget.Text
-        Widget.Widget
-        Widget.Window
         Block
+        Collector
+        Data
         Engine
         Event
         Request
@@ -59,6 +63,7 @@ library
         random ==1.3.1,
         sdl2 ==2.5.5.1,
         sdl2-ttf ==2.1.3,
+        sdl2-image ==2.1.0.0,
         sdl2-gfx==0.3.1.0
     hs-source-dirs:   src
     default-language: Haskell2010
@@ -78,6 +83,7 @@ executable test
         random ==1.3.1,
         sdl2 ==2.5.5.1,
         sdl2-ttf ==2.1.3,
+        sdl2-image ==2.1.0.0,
         sdl2-gfx==0.3.1.0,
         ui
 
